<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_mapa"
            android:title="@string/nav_mapa" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/nav_config" />
        <item
            android:id="@+id/nav_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_salir"
            android:title="@string/menu_exit" />
    </group>
</menu>