<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Configuracion.ConfiguracionFragment"
    android:background="#000000">
    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/text_slideshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/buttonNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Normal"
        app:layout_constraintTop_toBottomOf="@id/text_slideshow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonSatelite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Satelite "
        app:layout_constraintTop_toBottomOf="@id/buttonNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonHibrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonHibrido"
        app:layout_constraintTop_toBottomOf="@id/buttonSatelite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonTerreno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonTerreno"
        app:layout_constraintTop_toBottomOf="@id/buttonHibrido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/text_cambiar_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cambiar_idioma"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonTerreno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_cambiar_idioma"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonIngles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonIngles"/>

        <RadioButton
            android:id="@+id/radioButtonEspañol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonEspañol"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
